# MCV-C5-group08-image-captioning

./: .gitignore  EXPERIMENTS.md  README.md  main.py  pyproject.toml
configs/: baseline.yaml  baseline_attention.yaml  baseline_lstm.yaml  baseline_subword.yaml  baseline_word.yaml  clip_gpt2.yaml  clip_smollm.yaml  clip_t5.yaml  eval_pretrained.yaml  eval_qwen_multimodal.yaml  lora_qwen_0.8b.yaml  lora_qwen_4b.yaml  optuna.yaml  resnet50_gru.yaml  resnet50_gru_attention.yaml  resnet50_gru_subword.yaml  resnet50_gru_subword_attn.yaml  resnet50_gru_word.yaml  resnet50_gru_word_attn.yaml  resnet50_lstm.yaml  resnet50_lstm_attention.yaml  resnet50_lstm_subword.yaml  resnet50_lstm_subword_attn.yaml  resnet50_lstm_word.yaml  resnet50_lstm_word_attn.yaml  resnet50_xlstm.yaml  sweep.yaml  vit_gpt2.yaml  vit_smollm.yaml  vit_t5.yaml
outputs/A0/: experiment_log.json
outputs/A1/: experiment_log.json
outputs/A2/: experiment_log.json
outputs/A3/: experiment_log.json
outputs/A4/: experiment_log.json
outputs/A5/: experiment_log.json
outputs/B1/: experiment_log.json
outputs/B2/: experiment_log.json
outputs/B3/: experiment_log.json
outputs/B4/: experiment_log.json
outputs/B5/: experiment_log.json
outputs/B6/: experiment_log.json
outputs/GRU1/: experiment_log.json
outputs/GRU2/: experiment_log.json
outputs/GRU3/: experiment_log.json
outputs/GRU4/: experiment_log.json
outputs/GRU5/: experiment_log.json
outputs/T2-1_eval_Qwen3.5-2B/: eval_results.json
outputs/T2-1_eval_Qwen3.5-4B/: eval_results.json
outputs/T2-1_eval_Qwen3.5-9B/: describe_image.json  describe_image_briefly.json
outputs/eval_Qwen_Qwen3.5-9B_short-sentence/: eval_results.json
outputs/optuna_sweep_c1/: all_trials.json  best_trial.json  study.pkl
outputs/optuna_sweep_c2/: all_trials.json  best_trial.json  study.pkl
src/: evaluate.py  evaluate_lora.py  evaluate_multimodal.py  evaluate_pretrained.py  generate_hpo_plots.py  generate_presentation_plots.py  infer.py  optuna_sweep.py  optuna_visualize.py  train.py  train_lora.py  train_vit_decoder.py  visualize.py
src/data/: dataset.py  tokenizer.py  vizwiz.py
src/evaluation/: metrics.py
src/models/: attention.py  captioner.py  decoders.py  encoders.py  pretrained_captioner.py  qformer.py  (+2 more)
(+138 files in other folders)
