[project]
name = "c5-image-caption"
version = "0.1.0"
description = "Modular image captioning framework on VizWiz with swappable encoders, decoders, and text representations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evaluate>=0.4.0",
    "huggingface-hub>=1.7.1",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "nltk>=3.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tokenizers>=0.21.0",
    "torch>=2.10.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.19.0",
]

[project.scripts]
c5-caption = "main:main"
